fix:Some optimizations and performance improvements